--- a/src/faq.html
+++ b/src/faq.html
@@ -26,7 +26,7 @@
       <p class="title" click.delegate="showFaqItem(3)"><i class="fa fa-fw fa-angle-right"></i> Is sending files via Bitfly secure? How do I know you're not secretly storing all my data?</p>
       <div class="content">
         <p class="inner-content">
-        The way Bitfly works is secure to a certain degree but there are always possible threats. There are a variety of practical and theoretical attacks against WebRTC but Bitfly should be considered secure for most purposes and against non-sophisticated attackers. Due to the way the WebRTC handshake works there is a possibility that our server's knowledge allows us to maliciously perform a man-in-the-middle attack and gain access to your data. In this sense Bitfly provides no extra security (but no less also) compared to server- based solutions like Dropbox or Google Drive. On the other hand, the ephemeral existence of the files on the network does provide some guarantees that server- based solutions do not. For example, somebody successfully gaining access to our servers does not allow him or her to view the contents or metadata of any files sent in the past. We monitor our servers for threats and will respond by shutting down the service temporarily in case we detect a malicious actor to prevent compromise of future transfers. With the above in mind, <strong>we do not advise using Bitfly for highly sensitive data</strong>.
+        The way Bitfly works is relatively secure against simple threats. It is highly unlikely that a third-party would be able to access any data you sent via Bitfly. It is not absolutely secure though! Due to the way the WebRTC handshake works it is possible for us to perform a man-in-the-middle attack and gain access to your data (we promise we're not doing this!). In this sense Bitfly provides no extra security (but no less so) compared to server based solutions like Dropbox or Google Drive. On the other hand, the ephemeral existence of the files on the network does provide some guarantees that server based solutions do not e.g. somebody successfully gaining unauthorized access to our servers does not allow him or her to view the contents or metadata of any files sent in the past. We monitor our servers for threats and will respond by shutting down the service temporarily in case we detect a malicious actor to prevent compromise of future transfers. With the above in mind, <strong>we advise against using Bitfly for highly sensitive data</strong>.
         </p>
       </div>
     </div>
@@ -34,7 +34,7 @@
       <p class="title" click.delegate="showFaqItem(4)"><i class="fa fa-fw fa-angle-right"></i> Is sending files via Bitfly anonymous?</p>
       <div class="content">
         <p class="inner-content">
-        Bitfly does not provide complete anonymity like a service like TOR would. While we do not store any logs, our servers do know the IP addresses of both the sending and receiving devices for a short amount of time in order to setup the peer-to-peer connection. While using Bitfly for any kind of illegal material is strictly forbidden we cannot really tell what you are sending (see previous two questions) so it is up to you to be responsible with your data.
+        Bitfly does not provide anonymity like a service like TOR would. While we do not store any logs, our servers do know the IP addresses of both the sending and receiving devices for a short amount of time in order to setup the peer-to-peer connection. While using Bitfly for any kind of illegal material is strictly forbidden we cannot really tell what you are sending (see previous two questions) so it is up to you to be responsible with your data.
         </p>
       </div>
     </div>
@@ -42,7 +42,7 @@
       <p class="title" click.delegate="showFaqItem(5)"><i class="fa fa-fw fa-angle-right"></i> Can I see your code?</p>
       <div class="content">
         <p class="inner-content">
-        Bitfly is open-source and very small (less than 2000 lines of code). You can look at all of our backend and frontend code by clicking on the 'GitHub' button at the bottom of the page. All of the important code is on the client-side and you can inspect it easily with your browser developer tools (the code is also intentionally not minified).</strong>
+        Bitfly is open-source and very small (less than 2000 lines of code). You can look at all of our backend and frontend code by clicking on the 'GitHub' button at the bottom of the page. All of the important code is on the client-side and you can inspect it easily with your browser developer tools (the code is also intentionally not minified).
         </p>
       </div>
     </div>
@@ -50,7 +50,7 @@
       <p class="title" click.delegate="showFaqItem(6)"><i class="fa fa-fw fa-angle-right"></i> Javascript crypto is broken!</p>
       <div class="content">
         <p class="inner-content">
-        We are not doing any kind of vital cryptography in Bitfly's code. All of the actual encryption is done by your browser's WebRTC implementation (refer to questions 1 and 2). We do use the crypto-js package to do SHA-1 hashing of the file chunks in order to verify that we have rebuilt your file correctly on the other end, however this has no substantial implication on security.
+        We are not doing any kind of cryptography in Bitfly's code. All of the actual encryption is done by your browser's WebRTC implementation (refer to questions 1 and 2). We do use the crypto-js package to do SHA-1 hashing of the file chunks in order to verify that we have rebuilt your file correctly on the other end, however this has no substantial implication on security.
         </p>
       </div>
     </div>
