--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,11 @@
               Error! The receiving party sent an invalid secret! Maybe you gave them the wrong URL or somebody is doing something nasty.
             </div>
 
+            <div if.bind="!notifications['improv_security']" class="notification is-info">
+              <button class="delete" click.delegate="hideNotification('improv_security')"></button>
+              We have adopted an improved security-scheme, check out "How do the secret URLs work?" in the FAQ for details.
+            </div>
+
             <div if.bind="isUploader" class="container">
               <div if.bind="!file" id="dropzone" class="dropzone" ref="dropzoneRef">
                   <div class="dropzone-text">Drag and drop a file or click to browse</div>
