change wording to notification about new key gen

--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
 
             <div if.bind="!notifications['improv_security']" class="notification is-info">
               <button class="delete" click.delegate="hideNotification('improv_security')"></button>
-              We have adopted an improved security-scheme, check out "How do the secret URLs work?" in the FAQ for details.
+              We have adopted an improved key-generation model, check out "How do the secret URLs work?" in the FAQ for details.
             </div>
 
             <div if.bind="isUploader" class="container">
