--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <base href="http://localhost:9000/">
-    <title>Bitf.ly</title>
+    <title>Bitf.ly - secure file transfer over WebRTC</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
