--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,8 @@
 
           <div if.bind="isUploader" class="container">
             <div if.bind="!file" id="dropzone" class="dropzone" ref="dropzoneRef">
-                <div class="dropzone-text">Drag and drop a file or click to browse</div>
+                <div class="dropzone-text is-hidden-touch">Drag and drop a file or click to browse</div>
+                <div class="dropzone-text is-hidden-desktop">Touch here to select a file</div>
 
                 <div class="fileicon"></div>
 
