fix upload text for mobile

--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,7 @@
           <div if.bind="isUploader" class="container">
             <div if.bind="!file" id="dropzone" class="dropzone" ref="dropzoneRef">
                 <div class="dropzone-text is-hidden-touch">Drag and drop a file or click to browse</div>
-                <div class="dropzone-text is-hidden-desktop">Touch here to select a file</div>
+                <div class="dropzone-text is-hidden-desktop">Touch this box to select a file</div>
 
                 <div class="fileicon"></div>
 
