faq remove extraneous word

--- a/src/faq.html
+++ b/src/faq.html
@@ -38,7 +38,7 @@
         <strong>TL;DR - while Bitf.ly is secure against non-sophisticated threats we advise against using the service for highly sensitive data.</strong><br/>
 
         There are both pros and cons to our approach.<br/>
-        - You still have to trust the service (meaning us). There is no viable method for secure delivery of signed code to the browser. You have to trust that we have not done any malicious modifications to the client-side code and that our servers were not compromised.<br/>
+        - You still have to trust the service (meaning us). There is no viable method for delivery of signed code to the browser. You have to trust that we have not done any malicious modifications to the client-side code and that our servers were not compromised.<br/>
         - WebRTC potentially is vulnerable to man in the middle attacks. Anyone who posseses or could (in theory) guess the secret URLs could pretend to be the receving device and get to your data. Make sure to keep your secret URLs between you and your recipient. Your data is exposed to anyone who has the full URL!<br/>
         - No data is ever stored on any intermediary server. Your data is gone from the Internet the moment you close the tab. Any compromise of our infrastructure does not expose metadata or contents for any past transfers. We do monitor our servers vigilantly and will shut down the service temporarily in case of compromise. We'll also notify you promptly with a message on the site.
         </p>
