--- a/src/faq.html
+++ b/src/faq.html
@@ -48,7 +48,7 @@
       <p class="title" click.delegate="showFaqItem(5)"><i class="fa fa-fw fa-angle-right"></i> Is sending files via Bitfly anonymous?</p>
       <div class="content">
         <p class="inner-content">
-        Bitfly does not provide anonymity like a service like TOR would. While we do not store any logs, our servers do know the IP addresses of both the sending and receiving devices for a short amount of time in order to setup the peer-to-peer connection. While using Bitfly for any kind of illegal material is strictly forbidden we cannot really tell what you are sending (see previous two questions) so it is up to you to be responsible with your data.
+        Bitfly does not provide anonymity like a service like TOR would. While we do not store any logs, our servers do know the IP addresses of both the sending and receiving devices for a short amount of time in order to setup the peer-to-peer connection. While using Bitfly for any kind of illegal material is strictly forbidden we cannot really tell what you are sending (see the first two questions) so it's up to you to be responsible with your data.
         </p>
       </div>
     </div>
@@ -56,7 +56,7 @@
       <p class="title" click.delegate="showFaqItem(6)"><i class="fa fa-fw fa-angle-right"></i> Can I see your code?</p>
       <div class="content">
         <p class="inner-content">
-        Bitfly is open-source and very small (less than 2000 lines of code). You can look at all of our backend and frontend code by clicking on the 'GitHub' button at the bottom of the page. All of the important code is on the client-side and you can inspect it easily with your browser developer tools (the code is also intentionally not minified).
+        Bitfly is open-source and very small (less than 2000 lines of code). You can examine all of our backend and frontend code by clicking on the 'GitHub' button at the bottom of the page. All of the important code is on the client-side and you can inspect it easily with your browser developer tools (the code is also intentionally not minified). Pull-requests are welcome.
         </p>
       </div>
     </div>
