--- a/src/faq.html
+++ b/src/faq.html
@@ -53,10 +53,10 @@
       </div>
     </div>
     <div class="list-item" data-faq-item="6">
-      <p class="title" click.delegate="showFaqItem(6)"><i class="fa fa-fw fa-angle-right"></i> Can I see your code?</p>
+      <p class="title" click.delegate="showFaqItem(6)"><i class="fa fa-fw fa-angle-right"></i> Is Bitf.ly open-source?</p>
       <div class="content">
         <p class="inner-content">
-        Bitfly is open-source and very small (less than 2000 lines of code). You can examine all of our backend and frontend code by clicking on the 'GitHub' button at the bottom of the page. All of the important code is on the client-side and you can inspect it easily with your browser developer tools (the code is also intentionally not minified). Pull-requests are welcome.
+        Yes! Bitfly's code is MIT- licensed and very small (less than 3000 lines). You can fork all of our code by clicking on the 'GitHub' button at the bottom of the page. Pull-requests are welcome!
         </p>
       </div>
     </div>
