--- a/src/faq.html
+++ b/src/faq.html
@@ -9,8 +9,7 @@
       <div class="content">
         <p class="inner-content">
         Bitfly is a service which allows you to securely transfer files to (almost) any device with a modern browser.
-        It is powered by <a href="https://webrtc.org/">WebRTC</a> and establishes a peer-to-peer connection between the sending and receiving devices. <a href="https://webrtc.org/" target="_blank">WebRTC</a> is the technology powering Bitfly and is a relatively recent addition to your browser's toolkit. It is mostly intended for video and audio conferencing but works fine for any type of data. All WebRTC communication is encrypted using
-        the latest cryptography algoritms in your browser and is as secure as any HTTPS website you are likely to visit (like Facebook or your bank's website). No metadata or file contents are ever transmitted to any of our servers.
+        It is powered by <a href="https://webrtc.org/">WebRTC</a> and establishes a peer-to-peer connection between the sending and receiving devices. WebRTC communication is encrypted using the latest cryptography algorithms in your browser and is as secure as any HTTPS-enabled website you are likely to visit (like Facebook or your bank's website). No metadata or file contents are ever transmitted to any of our servers.
         </p>
       </div>
     </div>
@@ -48,7 +47,7 @@
       <p class="title" click.delegate="showFaqItem(5)"><i class="fa fa-fw fa-angle-right"></i> Is Bitf.ly open-source?</p>
       <div class="content">
         <p class="inner-content">
-        Yes! Bitfly's code is MIT- licensed and pretty small (less than 3000 lines). You can fork all of our code by clicking on the 'GitHub' button at the bottom of the page. Pull-requests are welcome!
+        Yes! Bitfly's code is MIT- licensed and very small (less than 3000 lines). You can fork all of our code by clicking on the 'GitHub' button at the bottom of the page. Pull-requests are welcome!
         </p>
       </div>
     </div>
